--- a/public/404.html
+++ b/public/404.html
@@ -201,7 +201,7 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="/post/lenovo-p51-the-data-scientist-laptop/">Lenovo P51 - the Data Scientist laptop</a></li>
+    <li><a href="/post/lenovo-p51-the-data-scientist-laptop/">Lenovo P51 - the Data Scientist&#39;s laptop</a></li>
   </ul>
   
   <ul>
