Ai Networks bot

--- a/public/404.html
+++ b/public/404.html
@@ -212,6 +212,10 @@
     <li><a href="/post/hurricane-irma/">Hurricane Irma</a></li>
   </ul>
   
+  <ul>
+    <li><a href="/post/my-complicated-relationship-with-the-second-amendment/">My complicated relationship with the second amendment</a></li>
+  </ul>
+  
   
 
   
